--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,11 @@
 "outDir": "dist",
 "rootDir": ".",
 "sourceMap": true,
-"strict": false
-}
+"skipLibCheck": true,
+"strict": true
+},
+"include": ["./src/**/*.*"],
+"exclude": [
+    "node_modules"
+  ],
 }
