--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@azure/functions": "^4.0.0",
+    "@biomejs/biome": "1.9.4",
     "@types/node": "^18.x",
     "typescript": "^4.9.5"
   }
