--- a/.github/workflows/main_scheidingsdesktest.yml
+++ b/.github/workflows/main_scheidingsdesktest.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js project to Azure Function App - scheidingsdesktest
+name: Build and deploy Node.js project to Azure Function App - Scheidingsdesktest
 
 on:
   push:
@@ -65,15 +65,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A6A7D0EC02E346AC9F06A111DF688C6A }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8418D9D8066A4037B1D0E6964DB6E17E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_817B616A6A804C1F8B6B961E0FE78D20 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0C706D04FC894A75B6BAE217E4364F38 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4D1FCB3E9E2A4C20B5A66FA346254B4B }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_58A52054550A4AA09FCCD95DD07557D5 }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'scheidingsdesktest'
+          app-name: 'Scheidingsdesktest'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           
