--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/identity": "^4.8.0",
     "@mollie/api-client": "^3.7.0",
     "axios": "^1.6.2",
+    "dataverse-webapi": "^3.0.2",
     "dynamics-web-api": "^2.2.1"
   },
   "devDependencies": {
