Update functions structure

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "scheidingsdesk-subscription-manager",
   "version": "1.0.0",
   "description": "Azure Function for handling Mollie webhooks",
-  "main": "dist/src/functions/*.js",
+  "main": "dist/functions/*.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "func start",
