--- a/.github/workflows/main_scheidingsdesktest.yml
+++ b/.github/workflows/main_scheidingsdesktest.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js project to Azure Function App - scheidingsdesktest
+name: Build and deploy Node.js project to Azure Function App - Scheidingsdesktest
 
 on:
   push:
@@ -65,15 +65,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F84404C3C09D4B4F818DD772A5AE512D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C559BCA4AD954BF99FC4D786AC0EEC2F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5F30AF2A2138480CBBE3F6A7B026B376 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_56C8E9CAD0774D3C830269C306283DB7 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5FF30A5630794B119D44CD06A46F91CA }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D493F9F02FC94900AF414F45144498F8 }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'scheidingsdesktest'
+          app-name: 'Scheidingsdesktest'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           
